src/objects/NRG_System__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>First_Year_Production__c</fullName>
        <label>First Year Production</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRG_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NRG Lead</label>
        <referenceTo>NRG_Lead__c</referenceTo>
        <relationshipLabel>NRG Systems</relationshipLabel>
        <relationshipName>NRG_Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Number__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>System Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>System_Size__c</fullName>
        <label>System Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>NRG System</label>
    <nameField>
        <displayFormat>NRS-{00000}</displayFormat>
        <label>NRG System Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NRG Systems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>